--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-transform-runtime": "7.12.1",
     "@babel/preset-env": "7.12.1",
     "@babel/runtime": "7.12.1",
+    "@jackfranklin/rollup-plugin-markdown": "0.2.0",
     "@rollup/plugin-babel": "5.2.1",
     "@rollup/plugin-commonjs": "15.1.0",
     "@rollup/plugin-node-resolve": "9.0.0",
@@ -31,6 +32,7 @@
     "eslint": "7.12.0",
     "eslint-plugin-svelte3": "2.7.3",
     "rollup": "2.32.1",
+    "rollup-plugin-glob": "1.0.2",
     "rollup-plugin-svelte": "6.1.0",
     "rollup-plugin-terser": "7.0.2",
     "sapper": "0.28.10",
